--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,19 @@
+:root {
+  --main-color: rgb(118, 118, 235);
+  --title-color: white;
+  --border-color: rgb(47, 47, 161);
+
+}
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+html, body {
+  width: 100vw;
+  height: 100vh;
+}
+
 .App {
   text-align: center;
 }
