--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,48 @@ html, body {
 }
 
 .App {
+  width: 100vw;
+  height: 100vh;
+  background-color: var(--main-color);
   text-align: center;
 }
+h1, h2 {
+  color: var(--title-color);
+  display: block;
+}
+#break-box, #session-box {
+  width: 30vw;
+  height: 10vh;
+  margin: 0 auto;
+  background-color: var(--main-color);
+  border-radius: 30px;
+  border: 5px var(--border-color) solid;
+}
+.toolbox {
+  display: flex;
+  flex-flow: row nowrap;
+  width: 30vw;
+  height: 40px;
+}
+ #session-length, #break-length {
+  flex-basis: 1;
+  width: 30%;
+  height: 100%;
+}
+#session-decrement, #session-increment, #break-decrement, #break-increment {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  flex-basis: 1;
+  width: 30%;
+  height: 100%;
+}
 
+.icon {
+  font-size: 24px;
+  color: var(--title-color);
+  opacity: 1;
+}
+.icon:hover {
+  font-size: 30px;
+}
