--- a/src/App.css
+++ b/src/App.css
@@ -12,14 +12,18 @@
 html, body {
   width: 100vw;
   height: 100vh;
+  background-color: var(--main-color);
+  display: grid;
+  place-items: center;
 }
 
 .App {
-  width: 100vw;
-  height: 100vh;
+  max-width: 600px;
+  height: 600px;
   padding-top: 10vh;
   background-color: var(--main-color);
   text-align: center;
+  border: 3px red solid;
 }
 h1, h2 {
   color: var(--title-color);
@@ -37,12 +41,12 @@ h1 {
  }
 #break-box, #session-box {
   flex-basis: 1;
-  width: 30vw;
-  height: 10vh;
-  margin: 0 10px;
+  width: 300px;
+  height: 100px;
+  margin: auto;
   background-color: var(--main-color);
- /* border-radius: 30px;
-  border: 5px var(--border-color) solid;*/
+  border-radius: 30px;
+  border: 5px var(--border-color) solid;
 }
 .toolbox {
   display: flex;
