--- a/src/App.css
+++ b/src/App.css
@@ -18,12 +18,12 @@ html, body {
 }
 
 .App {
-  max-width: 600px;
+  max-width: 400px;
   height: 600px;
   padding-top: 10vh;
   background-color: var(--main-color);
   text-align: center;
-  border: 3px red solid;
+  /* border: 3px red solid;*/
 }
 h1, h2 {
   color: var(--title-color);
@@ -45,20 +45,20 @@ h1 {
   height: 100px;
   margin: auto;
   background-color: var(--main-color);
-  border-radius: 30px;
-  border: 5px var(--border-color) solid;
+  /* border: 1px red dotted;*/
 }
 .toolbox {
   display: flex;
   flex-flow: row nowrap;
-  width: 30vw;
-  height: 40px;
+  width: 100%;
+  height: 50%;
   justify-content: center;
 }
  #session-length, #break-length {
   flex-basis: 1;
-  width: 10%;
+  width: 20%;
   height: 100%;
+  justify-content: center;
 }
 button {
   background-color: transparent;
@@ -67,7 +67,7 @@ button {
 }
 #session-decrement, #session-increment, #break-decrement, #break-increment {
   flex-basis: 1;
-  width: 10%;
+  width: 30px;
   height: 100%;
 }
 
@@ -81,13 +81,20 @@ button {
 }
 
 .btn:disabled .icon {
-  color: red;
+  color: var(--border-color);
   cursor: not-allowed;
 }
 
 #break-length, #session-length {
   font-size: 30px;
+  width: 40px;
+  height: 40px;
   color: var(--title-color);
+  display: flex;
+  text-align: center;
+  justify-items: center;
+  border: 3px var(--border-color) solid;
+  border-radius: 50%;
 }
 #author {
   color: var(--border-color)
