--- a/src/components/Timer.css
+++ b/src/components/Timer.css
@@ -1,6 +1,6 @@
 #timer-frame {
-    width: 30vw;
-    height: 20vh;
+    width: 250px;
+    height: 150px;
     margin: 0 auto;
     background-color: var(--main-color);
     border-radius: 30px;
@@ -20,7 +20,7 @@
     display: flex;
     flex-flow: row nowrap;
     margin: 5px auto;
-    width: 30vw;
+    width: 125px;
     height: 30px;
     justify-content: center;
     align-items: center;
@@ -36,4 +36,6 @@
     align-self: center;
     justify-self: center;
 }
-
+#start_stop:hover, #reset:hover {
+    color: var(--border-color)
+}
