--- a/src/components/Timer.css
+++ b/src/components/Timer.css
@@ -20,15 +20,16 @@
     display: flex;
     flex-flow: row nowrap;
     margin: 5px auto;
+    padding: 5px;
     width: 125px;
-    height: 30px;
+    height: 50px;
     justify-content: center;
     align-items: center;
 }
 #start_stop, #reset {
     flex-basis: 1;
-    height: 10vh;
-    width: 50vw;
+    height: 50px;
+    width: 50px;
     justify-content: center;
     align-content: center;
     padding-left: 5px;
